# examples

./: CMakeLists.txt
TestHidApi/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  udevmonitor.cpp  udevmonitor.h
TestSMWidgets/: CMakeLists.txt  testsmwidgets.cpp  testsmwidgets.h
